Deleteing The Question

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10679,3 +10679,11 @@ a.text-dark:focus {
   margin-top: 10px;
 }
 
+h3.widthTitle {
+  width: 55rem;
+}
+
+form.form-delete {
+  display: inline;
+}
+
