Add vote controllers to question and answer item

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -50,3 +50,39 @@ h3.widthTitle{
 form.form-delete {
     display: inline;
 }
+
+.vote-controls {
+    min-width: 60px;
+    margin-right: 30px;
+    text-align: center;
+    color: $gray-700;
+
+    span, a {
+        display: block;
+    }
+    span {
+        &.votes-count {
+            font-size: 25px;
+        }
+        &.favorite {
+            font-size: 12px;
+        }
+    }
+    a {
+        cursor: pointer;
+        color: $gray-700;
+        &.off, &.off:hover {
+            color: $gray-500;
+        }
+        &.favorite {
+            &.favorited, &.favorited:hover {
+                color: $warning;
+            }
+        }
+        &.vote-accepted {
+            color: $green;
+        }
+    }
+}
+
+
